gts-macros/tests/compile_fail/gts_error_missing_type.stderr
error: gts_error: Missing required attribute: 'type'
 --> tests/compile_fail/gts_error_missing_type.rs:3:1
  |
3 | / #[gts_error(
4 | |     status = 404,
5 | |     title = "Not Found",
6 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `gts_error` (in Nightly builds, run with -Z macro-backtrace for more info)
